cs112/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
21:48:29 **** Incremental Build of configuration Debug for project project02 ****
make all 
make: Nothing to be done for 'all'.
21:48:35 **** Auto Build of configuration Debug for project project02 ****
make all 
Building file: ../Array.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"Array.d" -MT"Array.o" -o "Array.o" "../Array.cpp"
Finished building: ../Array.cpp
 
Building target: project02
Invoking: GCC C++ Linker
g++  -o "project02"  ./Array.o ./ArrayTester.o ./main.o   
Finished building target: project02
 
21:48:44 **** Incremental Build of configuration Debug for project project02 ****
make all 
make: Nothing to be done for 'all'.
21:51:12 **** Incremental Build of configuration Debug for project project02 ****
make all 
Building file: ../Array.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"Array.d" -MT"Array.o" -o "Array.o" "../Array.cpp"
Finished building: ../Array.cpp
 
Building target: project02
Invoking: GCC C++ Linker
g++  -o "project02"  ./Array.o ./ArrayTester.o ./main.o   
Finished building target: project02
 
21:51:20 **** Incremental Build of configuration Debug for project project02 ****
make all 
Building file: ../Array.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"Array.d" -MT"Array.o" -o "Array.o" "../Array.cpp"
Finished building: ../Array.cpp
 
Building target: project02
Invoking: GCC C++ Linker
g++  -o "project02"  ./Array.o ./ArrayTester.o ./main.o   
Finished building target: project02
 
21:52:36 **** Auto Build of configuration Debug for project project02 ****
make all 
Building file: ../Array.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"Array.d" -MT"Array.o" -o "Array.o" "../Array.cpp"
Finished building: ../Array.cpp
 
Building target: project02
Invoking: GCC C++ Linker
g++  -o "project02"  ./Array.o ./ArrayTester.o ./main.o   
Finished building target: project02
 
21:52:39 **** Incremental Build of configuration Debug for project project02 ****
make all 
make: Nothing to be done for 'all'.
21:55:57 **** Incremental Build of configuration Debug for project Project03 ****
make all 
make: Nothing to be done for 'all'.
22:01:06 **** Auto Build of configuration Debug for project project02 ****
make all 
Building file: ../Array.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"Array.d" -MT"Array.o" -o "Array.o" "../Array.cpp"
../Array.cpp: In function 'void read(std::istream&, double*, int)':
../Array.cpp:49:9: error: expected primary-expression before ';' token
   in>>a*;
         ^
subdir.mk:24: recipe for target 'Array.o' failed
make: *** [Array.o] Error 1
22:01:32 **** Auto Build of configuration Debug for project project02 ****
make all 
Building file: ../Array.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"Array.d" -MT"Array.o" -o "Array.o" "../Array.cpp"
Finished building: ../Array.cpp
 
Building target: project02
Invoking: GCC C++ Linker
g++  -o "project02"  ./Array.o ./ArrayTester.o ./main.o   
Finished building target: project02
 
22:01:51 **** Incremental Build of configuration Debug for project project02 ****
make all 
make: Nothing to be done for 'all'.
22:08:54 **** Auto Build of configuration Debug for project project02 ****
make all 
Building file: ../Array.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"Array.d" -MT"Array.o" -o "Array.o" "../Array.cpp"
../Array.cpp: In function 'void resize(double*&, int, int)':
../Array.cpp:74:4: error: 'b' was not declared in this scope
    b[i] = a[i];
    ^
../Array.cpp:80:5: error: 'b' was not declared in this scope
     b[i] = a[i];
     ^
../Array.cpp:71:10: warning: unused variable 'n' [-Wunused-variable]
  double* n= new double[newSize];
          ^
subdir.mk:24: recipe for target 'Array.o' failed
make: *** [Array.o] Error 1
22:09:01 **** Auto Build of configuration Debug for project Project03 ****
make all 
make: Nothing to be done for 'all'.
22:13:01 **** Auto Build of configuration Debug for project project02 ****
make all 
Building file: ../Array.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"Array.d" -MT"Array.o" -o "Array.o" "../Array.cpp"
Finished building: ../Array.cpp
 
Building target: project02
Invoking: GCC C++ Linker
g++  -o "project02"  ./Array.o ./ArrayTester.o ./main.o   
Finished building target: project02
 
22:15:18 **** Auto Build of configuration Debug for project project02 ****
make all 
Building file: ../Array.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"Array.d" -MT"Array.o" -o "Array.o" "../Array.cpp"
Finished building: ../Array.cpp
 
Building target: project02
Invoking: GCC C++ Linker
g++  -o "project02"  ./Array.o ./ArrayTester.o ./main.o   
Finished building target: project02
 
22:15:20 **** Incremental Build of configuration Debug for project project02 ****
make all 
make: Nothing to be done for 'all'.
22:16:38 **** Auto Build of configuration Debug for project project02 ****
make all 
Building file: ../Array.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"Array.d" -MT"Array.o" -o "Array.o" "../Array.cpp"
Finished building: ../Array.cpp
 
Building target: project02
Invoking: GCC C++ Linker
g++  -o "project02"  ./Array.o ./ArrayTester.o ./main.o   
Finished building target: project02
 
22:17:17 **** Auto Build of configuration Debug for project project02 ****
make all 
Building file: ../Array.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"Array.d" -MT"Array.o" -o "Array.o" "../Array.cpp"
Finished building: ../Array.cpp
 
Building target: project02
Invoking: GCC C++ Linker
g++  -o "project02"  ./Array.o ./ArrayTester.o ./main.o   
Finished building target: project02
 
22:17:23 **** Incremental Build of configuration Debug for project project02 ****
make all 
make: Nothing to be done for 'all'.
15:31:20 **** Incremental Build of configuration Debug for project Project03 ****
make all 
make: Nothing to be done for 'all'.
